# doom-music-hs

./: .gitignore  Core.hs  Main.hs  README.md  flake.nix  music-maker.cabal  package.yaml
src/: Core.hs  Main.hs  Score.hs
