cabal-version:      2.4
name:               music-maker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

executable music-maker
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Core
    Score

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    
    base ^>=4.15.1.0,
    bytestring,
    containers,
    process
  hs-source-dirs:   src
  default-language: Haskell2010
